Change document rule to URL prefix for Sisu page
Updated the CSS rule to apply to a specific URL prefix for better readability and fixed "opintokalenteri" page being broken.

--- a/sisu-grid.user.css
+++ b/sisu-grid.user.css
@@ -6,7 +6,7 @@
 @author         source-exp
 ==/UserStyle== */
 
-@-moz-document domain("sisu.helsinki.fi") {
+@-moz-document url-prefix("https://sisu.helsinki.fi/student/plan/") {
     fudis-grid.fudis-grid__xxl {
         display: grid !important;
         grid-template-columns: repeat(3, 1fr) !important;
